# youbot_packages

youbot_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
youbot_arm_moveit_config/config/: cartesian_limits.yaml  fake_controllers.yaml  gazebo_youbot.urdf  joint_limits.yaml  kinematics.yaml  simple_moveit_controllers.yaml  youbot.srdf
youbot_arm_moveit_config/include/youbot_arm_moveit_config/: arm_utils_v2.h  arm_utils_v3.h
youbot_arm_moveit_config/launch/: HW_arm_test.launch  arm_test.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
youbot_arm_moveit_config/src/: ArmUtils.cpp  ArmUtilsLight copy 2.cpp  ArmUtilsLight.cpp  arm_utils_v2.cpp  arm_utils_v3.cpp  dummyPub.py
youbot_description/: CMakeLists.txt  package.xml
youbot_description/meshes/youbot_arm/: arm0.mtl  arm1.mtl  arm2.mtl  arm3.mtl  arm4.mtl  arm5.mtl
youbot_description/meshes/youbot_hose_holder/: hose_support.dae  hose_support_convex.dae
youbot_description/robots/: youbot.urdf.xacro  youbot_arm_only.urdf.xacro  youbot_sensor_suite.urdf.xacro
youbot_description/urdf/youbot_hose_holder/: hose_holder.gazebo.xacro  hose_holder.urdf.xacro
youbot_description/urdf_standalone/: arm.urdf  arm_only.urdf
youbot_description/urdf_standalone_obj/: arm_only.urdf
youbot_global_planner/: CMakeLists.txt  package.xml
youbot_global_planner/config/: filters_demo_filter_chain.yaml  filters_demo_filter_chain_v2.yaml
youbot_global_planner/launch/: filterTest.launch  grid_map_filter.launch
youbot_global_planner/src/: BaseExplorationCandidateGenerator.cpp  MapUtils.cpp  OccupancyGridToGridMapNode.cpp  youbot_sim.code-workspace
youbot_horizontal_cavity_detection/: CMakeLists.txt  package.xml
youbot_horizontal_cavity_detection/config/: config.rviz  horizontal_cavity_filtering_pipeline.json
youbot_horizontal_cavity_detection/include/youbot_horizontal_cavity_detection/: HorizontalCavityDetector.h
youbot_horizontal_cavity_detection/src/: HorizontalCavityDetection.cpp
youbot_local_trajectory_planner/: CMakeLists copy.txt  CMakeLists.txt  package copy.xml  package.xml
youbot_local_trajectory_planner/action/: BaseTrajectoryFollowing.action
youbot_local_trajectory_planner/msg/: TargetBase.msg
youbot_local_trajectory_planner/src/: BaseTrajectoryFollowerHWServer.py  BaseTrajectoryProcessingClient.py  dummyPub.py
youbot_vertical_cavity_detection/: CMakeLists.txt  package.xml
youbot_vertical_cavity_detection/config/: pipeline_config delimiter_detection.json  pipeline_config_edge_detection.json
youbot_vertical_cavity_detection/src/: PipelineFromJson.py  PlaneCalibration.cpp  VerticalCavityServoClient.py  VerticalCavityServoClient_V2.py  VerticalCavityServoClient_V2_vision_only.py
