<?xml version="1.0"?>
<package>
  <name>youbot_description</name>
  <version>0.1.0</version>
  <description>Robot descriptions in form of URDF files and meshes</description>

  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
  <maintainer email="blumenthal@locomotec.com">Sebastian Blumenthal</maintainer>

  <license>GPLv3</license>

  <!--url type="website">http://github.com/youbot/youbot_description</url-->

  <author email="frederik.hegger@h-brs.de">Frederik Heger</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>velodyne_description</build_depend>

  <run_depend>xacro</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>velodyne_description</run_depend>

</package>
