<package format="2">
  <name>youbot_global_planner</name>
  <version>0.0.0</version>
  <description>The youbot_global_planner package</description>

  <maintainer email="user@todo.todo">TODO: Maintainer Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_filters</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>Eigen3</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_filters</exec_depend>
  <exec_depend>filters</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>Eigen3</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>